force-app/objects/Bid_room_delete__c/Bid_room_delete__c.object-meta.xml
<CustomObject>
    <description>Receive information from Sharepoint about deleted bid room</description>
    <label>Bid room delete</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{0000}</displayFormat>
        <label>Bid room delete Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bid room delete</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>