force-app/objects/Bid_room_delete__c/fields/Bid_Room__c.field-meta.xml
<CustomField>
    <fullName>Bid_Room__c</fullName>
    <label>Bid Room</label>
    <length>255</length>
    <type>Text</type>
</CustomField>