force-app/objects/Bid_room_delete__c/fields/BidId__c.field-meta.xml
<CustomField>
    <fullName>BidId__c</fullName>
    <label>BidId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>