force-app/objects/Bid_room_delete__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>20</length>
    <type>Text</type>
</CustomField>