force-app/objects/Bid_room_delete__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Bid room delete</relationshipLabel>
    <relationshipName>Bid_room_delete</relationshipName>
    <type>Lookup</type>
</CustomField>