force-app/objects/Bid_room_delete__c/fields/OpportunityID__c.field-meta.xml
<CustomField>
    <fullName>OpportunityID__c</fullName>
    <label>OpportunityID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>