force-app/objects/Bid_room_delete__c/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>